# machine-remediation

./: .gitignore  .travis.yml  BUILD  BUILD.bazel  Gopkg.toml  Makefile  OWNERS  README.md  WORKSPACE  go.mod  go.sum  stdci.yaml
automation/: test.sh
cluster/: build.sh  clean.sh  deploy.sh  down.sh  provider-common.sh
cluster/k8s-1.10.4/: BUILD.bazel  provider.sh
cluster/os-3.10.0/: BUILD.bazel
cmd/machine-health-check/: BUILD.bazel  main.go
cmd/machine-remediation/: BUILD.bazel  main.go
cmd/machine-remediation-operator/: BUILD.bazel  main.go
cmd/machine-remediation-request/: BUILD.bazel  main.go
cmd/noderecovery/: BUILD.bazel  Dockerfile  noderecovery.go
cmd/reboot-annotation/: BUILD.bazel  main.go
docs/: architecture.md  define-remediation-conditions.md  disable-fencing.txt  getting-started.md  machine-disruption-budget.md  machine-health-check.md  machine-remediation-config.md  machine-remediation.md  release.md  remediation-flow.drawio
hack/: boilerplate.go.txt  common.sh  config-default.sh  config.sh  dep-prune.sh  deps-update.sh  dockerized  functests-build.sh  functests-run.sh  generate-clean.sh  generate-client.sh  generate-crds.sh  generate-manifests.sh  generate-templates.sh  generate.sh  print-workspace-status.sh  release-announce.sh  update-codegen.sh  version.sh
images/base/: BUILD.bazel  build-all.sh  publish-all.sh
images/base/builder/: Dockerfile
images/base/openssh-client/: Dockerfile
images/testing/fakeipmi/: BUILD.bazel  fakeipmi.py
images/testing/ssh-executor/: BUILD.bazel  Dockerfile  build.sh  publish.sh  ssh.sh
manifests/: BUILD.bazel  machine.yaml.in  node-problem-detector.yaml  noderecovery.yaml  noderecovery.yaml.in  rbac.yaml  rbac.yaml.in
manifests/examples/: demo-machines.yaml
manifests/release/: machine-remediation-operator-cr.yaml.in  machine-remediation-operator-csv.yaml.in  machine-remediation-operator.yaml.in  machine-remediation.yaml.in  machineremediationoperator.VERSION.clusterserviceversion.yaml.in
manifests/testing/: BUILD.bazel  cluster-api-external-provider.yaml.in  cluster.yaml.in  machines.yaml.in  rbac.yaml.in
pkg/baremetal/remediator/: BUILD.bazel  remediator.go  remediator_test.go
pkg/client/: BUILD.bazel  client.go
pkg/client/clientset/versioned/: BUILD.bazel  clientset.go  doc.go
pkg/client/clientset/versioned/fake/: BUILD.bazel  clientset_generated.go  doc.go  register.go
pkg/client/clientset/versioned/scheme/: BUILD.bazel  doc.go  register.go
pkg/client/clientset/versioned/typed/machineremediation/v1alpha1/: BUILD.bazel  generated_expansion.go  machinedisruptionbudget.go  machinehealthcheck.go  machineremediation.go  machineremediation_client.go
pkg/client/clientset/versioned/typed/machineremediation/v1alpha1/fake/: BUILD.bazel  fake_machinedisruptionbudget.go  fake_machinehealthcheck.go  fake_machineremediation.go  fake_machineremediation_client.go
pkg/client/clientset/versioned/typed/machineremediationrequest/v1alpha1/: BUILD.bazel  generated_expansion.go  machineremediationrequest.go  machineremediationrequest_client.go
pkg/client/clientset/versioned/typed/machineremediationrequest/v1alpha1/fake/: BUILD.bazel  fake_machineremediationrequest.go  fake_machineremediationrequest_client.go
pkg/client/clientset/versioned/typed/noderecovery/v1alpha1/: BUILD.bazel  doc.go  generated_expansion.go  noderecovery_client.go  noderemediation.go
pkg/client/clientset/versioned/typed/noderecovery/v1alpha1/fake/: BUILD.bazel  doc.go  fake_noderecovery_client.go  fake_noderemediation.go
pkg/client/informers/externalversions/: BUILD.bazel  factory.go  generic.go
pkg/client/informers/externalversions/internalinterfaces/: BUILD.bazel  factory_interfaces.go
pkg/client/informers/externalversions/noderecovery/: BUILD.bazel  interface.go
pkg/client/informers/externalversions/noderecovery/v1alpha1/: BUILD.bazel  interface.go  noderemediation.go
pkg/client/listers/noderecovery/v1alpha1/: BUILD.bazel  expansion_generated.go  noderemediation.go
pkg/controller/: BUILD.bazel  conditions.go  utils.go
pkg/controller/informerfactory/: BUILD.bazel  factory.go
pkg/controller/leaderelectionconfig/: BUILD.bazel  config.go  types.go
pkg/controller/machineremediation/: BUILD.bazel  machineremediation_controller.go  remediator.go
pkg/controller/machineremediationrequest/: BUILD.bazel  machineremediationrequest_controller.go  machineremediationrequest_controller_test.go  remediator.go
pkg/controller/noderecovery/: BUILD.bazel  application.go  controller.go  controller_test.go
pkg/controller/rebootannotation/: BUILD.bazel  rebootannotation_controller.go  rebootannotation_controller_test.go
pkg/controllers/: BUILD.bazel  controller.go
pkg/controllers/machinedisruptionbudget/: BUILD.bazel  machinedisruptionbudget_controller.go  machinedisruptionbudget_controller_test.go
pkg/controllers/machinehealthcheck/: BUILD.bazel  machinehealthcheck_controller.go  machinehealthcheck_controller_test.go
pkg/controllers/machineremediation/: BUILD.bazel  machineremediation_controller.go  machineremediation_controller_test.go  remediator.go
pkg/controllers/nodereboot/: BUILD.bazel  nodereboot.go  nodereboot_controller.go  nodereboot_controller_test.go
pkg/controllers/rebootannotation/: BUILD.bazel
pkg/operator/: BUILD.bazel  operator.go  operator_test.go  resources.go
pkg/operator/components/: BUILD.bazel  components.go  csv.go  deployments.go  mdb.go  mhc.go  mro.go  rbac.go
pkg/testing/: BUILD.bazel  utils.go
pkg/testing/cluster-api/client/clientset/fake/: BUILD.bazel
pkg/version/: BUILD.bazel  def.bzl
tests/: BUILD.bazel  e2e_test.go  machinedisruptionbudget.go  machinehealthcheck.go  machineremediation.go  node_remediation_test.go  tests_suite_test.go  utils.go
tests/utils/: BUILD.bazel  mdbs.go  mhcs.go  nodes.go
tools/: BUILD.bazel  (+1 more)
tools/csv-generator/: BUILD.bazel  csv-generator.go
tools/manifest-templator/: BUILD.bazel  manifest-templator.go
tools/resource-generator/: BUILD.bazel  resource-generator.go
tools/utils/: BUILD.bazel  marshaller.go  marshaller_test.go
(+79 files in other folders)
