load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "kubevirt.io/node-recovery",
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_bundle",
    container_repositories = "repositories",
)

load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

docker_push(
    name = "push_images",
    bundle = select({
        "//cluster/k8s-1.10.4:cluster_provider_k8s_1_10_4" :"//cluster/k8s-1.10.4:noderecovery_images",
        "//cluster/os-3.10.0:cluster_provider_os_3_10_0" :"//cluster/os-3.10.0:noderecovery_images",
    })
)
