load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "kubevirt.io/node-recovery",
)

load("@io_bazel_rules_docker//contrib:passwd.bzl", "passwd_entry", "passwd_file")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

passwd_entry(
    name = "nonroot_user",
    home = "/home/nonroot-user",
    shell = "/bin/bash",
    uid = 1001,
    gid = 1001,
    username = "nonroot-user",
)

passwd_file(
    name = "passwd",
    entries = [
        ":nonroot_user",
    ],
)

pkg_tar(
    name = "passwd_tar",
    srcs = [":passwd"],
    mode = "0644",
    package_dir = "etc",
    visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_bundle",
    container_repositories = "repositories",
)

config_setting(
    name = "release",
    values = {"define": "release=true"},
)

container_bundle(
    name = "noderecovery_images",
    images = {
        "index.docker.io/kubevirt/noderecovery:$(container_tag)": "//cmd/noderecovery:noderecovery_image",
    },
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

docker_push(
    name = "push_images",
    bundle = select({
        "//cluster/k8s-1.11.0:cluster_provider_k8s_1_11_0": "//cluster/k8s-1.11.0:noderecovery_images",
        "//cluster/os-3.11.0:cluster_provider_os_3_11_0": "//cluster/os-3.11.0:noderecovery_images",
        ":release": ":noderecovery_images",
    }),
)
