config_setting(
    name = "release",
    values = {"define": "release=true"},
)

config_setting(
    name = "dev",
    values = {"define": "dev=true"},
)

filegroup(
    name = "manifests",
    srcs = glob([
        "*.yaml.in",
    ]),
)

genrule(
    name = "concat_all_manifests",
    srcs = [":manifests"],
    outs = ["noderecovery-all.yaml.in"],
    cmd = "cat $(locations :manifests) > $@",
)

genrule(
    name = "generate_manifests",
    srcs = [":concat_all_manifests"],
    outs = ["noderecovery.yaml"],
    cmd = select({
        ":dev": "./$(location //tools/manifest-templator:manifest-templator) \
            --namespace=noderecovery \
            --container-prefix=registry:5000/kubevirt \
            --container-tag=devel \
            --image-pull-policy=Always \
            --input-file=$(locations :concat_all_manifests) > $@",
        ":release": "./$(location //tools/manifest-templator:manifest-templator) \
            --namespace=noderecovery \
            --container-prefix=docker.io/kubevirt \
            --container-tag=latest \
            --image-pull-policy=IfNotPresent \
            --input-file=$(locations :concat_all_manifests) > $@",
    }),
    tools = ["//tools/manifest-templator:manifest-templator"],
    visibility = ["//visibility:public"],
)
