load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "tests.go",
        "utils.go",
    ],
    importpath = "kubevirt.io/node-recovery/tests",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/client:go_default_library",
        "//vendor/github.com/ghodss/yaml:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/intstr:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/rand:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/scheme:go_default_library",
        "//vendor/k8s.io/client-go/tools/remotecommand:go_default_library",
        "//vendor/kubevirt.io/cluster-api-provider-external/pkg/apis/providerconfig/v1alpha1:go_default_library",
        "//vendor/kubevirt.io/cluster-api-provider-external/pkg/external/machinesetup:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/apis/cluster/v1alpha1:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "node_remediation_test.go",
        "tests_suite_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/noderecovery/v1alpha1:go_default_library",
        "//pkg/client:go_default_library",
        "//pkg/controller:go_default_library",
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/kubevirt.io/cluster-api-provider-external/pkg/apis/providerconfig/v1alpha1:go_default_library",
    ],
)
