load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_bundle",
    container_repositories = "repositories",
)

container_bundle(
    name = "noderecovery_images",
    images = {
        "localhost:33001/kubevirt/noderecovery:devel": "//cmd/noderecovery:noderecovery_image",
        "localhost:33001/kubevirt/ssh-executor:devel": "//images/testing/ssh-executor:ssh_executor_image",
        "localhost:33001/kubevirt/fakeipmi:devel": "//images/testing/fakeipmi:fakeipmi_image",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "cluster_provider_os_3_10_0",
    define_values = {
        "dev": "true",
        "cluster_provider": "os_3_10_0",
    },
)
