load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/machine-remediation-operator/cmd/machine-remediation-operator",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/machineremediation/v1alpha1:go_default_library",
        "//pkg/controllers:go_default_library",
        "//pkg/operator:go_default_library",
        "//pkg/version:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client/config:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/runtime/signals:go_default_library",
    ],
)

load("//pkg/version:def.bzl", "version_x_defs")

go_binary(
    name = "machine-remediation-operator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    x_defs = version_x_defs(),
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

container_image(
    name = "machine-remediation-operator-image",
    base = "//:passwd-image",
    directory = "/usr/bin/",
    entrypoint = ["/usr/bin/machine-remediation-operator"],
    files = [":machine-remediation-operator"],
    user = "65534",
    visibility = ["//visibility:public"],
)
