load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/machine-remediation-operator/cmd/machine-remediation-operator",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/machineremediation/v1alpha1:go_default_library",
        "//pkg/consts:go_default_library",
        "//pkg/controllers:go_default_library",
        "//pkg/operator:go_default_library",
        "//pkg/utils/mapper:go_default_library",
        "//pkg/version:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/openshift/api/config/v1:go_default_library",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1beta1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/cache:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client/config:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/runtime/signals:go_default_library",
    ],
)

load("//pkg/version:def.bzl", "version_x_defs")

go_binary(
    name = "machine-remediation-operator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    x_defs = version_x_defs(),
)

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "crds-tar",
    srcs = ["//manifests:crds"],
    mode = "0666",
    package_dir = "data",
    visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

container_image(
    name = "crds-image",
    base = "//:passwd-image",
    directory = "/",
    tars = [":crds-tar"],
    user = "65534",
    visibility = ["//visibility:public"],
)

container_image(
    name = "machine-remediation-operator-image",
    base = ":crds-image",
    directory = "/usr/bin/",
    entrypoint = ["/usr/bin/machine-remediation-operator"],
    files = [
        ":machine-remediation-operator",
        "//tools/csv-generator",
    ],
    user = "65534",
    visibility = ["//visibility:public"],
)
