load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/metal3-io/machine-remediation-request-operator/cmd/machine-remediation-request",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/apis/machineremediationrequest/v1alpha1:go_default_library",
        "//pkg/controller:go_default_library",
        "//pkg/controller/machineremediationrequest:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/apis/machine/v1beta1:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client/config:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/runtime/signals:go_default_library",
    ],
)

go_binary(
    name = "machine-remediation-request",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
