load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/machine-remediation/cmd/machine-remediation",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/apis/machineremediation/v1alpha1:go_default_library",
        "//pkg/baremetal/remediator:go_default_library",
        "//pkg/controllers:go_default_library",
        "//pkg/controllers/machineremediation:go_default_library",
        "//pkg/controllers/nodereboot:go_default_library",
        "//pkg/version:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/metal3-io/baremetal-operator/pkg/apis/metal3/v1alpha1:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/apis/machine/v1beta1:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client/config:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/runtime/signals:go_default_library",
    ],
)

load("//pkg/version:def.bzl", "version_x_defs")

go_binary(
    name = "machine-remediation",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    x_defs = version_x_defs(),
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

container_image(
    name = "machine-remediation-image",
    base = "//:passwd-image",
    directory = "/usr/bin/",
    entrypoint = ["/usr/bin/machine-remediation"],
    files = [":machine-remediation"],
    user = "65534",
    visibility = ["//visibility:public"],
)
