load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["noderecovery.go"],
    importpath = "kubevirt.io/node-recovery/cmd/noderecovery",
    visibility = ["//visibility:private"],
    deps = ["//pkg/controller/noderecovery:go_default_library"],
)

go_binary(
    name = "noderecovery",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    container_repositories = "repositories",
)

container_image(
    name = "passwd_image",
    base = "@fedora//image",
    tars = ["//:passwd_tar"],
    user = "nonroot-user",
    visibility = ["//visibility:private"],
)

container_image(
    name = "noderecovery_image",
    base = ":passwd_image",
    files = [":noderecovery"],
    directory = "/usr/bin",
    entrypoint = ["/usr/bin/noderecovery"],
    user = "nonroot-user",
    visibility = ["//visibility:public"],
)
