load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["controller.go"],
    importpath = "kubevirt.io/machine-remediation/pkg/controllers",
    visibility = ["//visibility:public"],
    deps = ["//vendor/sigs.k8s.io/controller-runtime/pkg/manager:go_default_library"],
)
