load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "base.go",
        "types.go",
        "version.go",
    ],
    importpath = "github.com/openshift/machine-remediation-operator/pkg/version",
    visibility = ["//visibility:public"],
)
