load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["csv-generator.go"],
    importpath = "kubevirt.io/machine-remediation-operator/tools/csv-generator",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/apis/machineremediation/v1alpha1:go_default_library",
        "//pkg/operator/components:go_default_library",
        "//tools/utils:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
    ],
)

go_binary(
    name = "csv-generator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
