load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["manifest-templator.go"],
    importpath = "kubevirt.io/machine-remediation-operator/tools/manifest-templator",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/operator/components:go_default_library",
        "//tools/utils:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/api/rbac/v1:go_default_library",
    ],
)

go_binary(
    name = "manifest-templator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
