load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["resource-generator.go"],
    importpath = "kubevirt.io/machine-remediation-operator/tools/resource-generator",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/operator/components:go_default_library",
        "//tools/utils:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
    ],
)

go_binary(
    name = "resource-generator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
