load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["marshaller.go"],
    importpath = "github.com/openshift/machine-remediation-request-operator/tools/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/ghodss/yaml:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1/unstructured:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["marshaller_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/cynepco3hahue/machine-health-check-operator/tools/components:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
    ],
)
