load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    container_repositories = "repositories",
)
load("@io_bazel_rules_docker//contrib:passwd.bzl", "passwd_entry", "passwd_file")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

passwd_entry(
    name = "nonroot_user",
    home = "/home/ssh-executor",
    shell = "/bin/bash",
    uid = 1001,
    gid = 1001,
    username = "ssh-executor",
)

passwd_file(
    name = "passwd",
    entries = [
        ":nonroot_user",
    ],
)

pkg_tar(
    name = "passwd_tar",
    srcs = [":passwd"],
    mode = "0644",
    package_dir = "etc",
)

container_image(
    name = "passwd_image",
    base = "@openssh_client//image",
    tars = [":passwd_tar"],
    user = "ssh-executor",
    visibility = ["//visibility:private"],
)

pkg_tar(
    name = "ssh_executor_tar",
    srcs = [
        ":ssh.sh",
        ":vagrant.key",
    ],
    package_dir = "/usr/local/bin",
    modes = {
        "ssh.sh": "0755",
        "vagrant.key": "0644",
    },
)

container_image(
    name = "ssh_executor_image",
    base = ":passwd_image",
    tars = [":ssh_executor_tar"],
    entrypoint = ["/usr/local/bin/ssh.sh"],
    user = "ssh-executor",
    visibility = ["//visibility:public"],
)
