load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["remediator.go"],
    importpath = "github.com/openshift/machine-remediation-operator/pkg/baremetal/remediator",
    visibility = ["//visibility:public"],
    deps = ["//pkg/apis/machineremediation/v1alpha1:go_default_library"],
)
